# 2025-machine-in-the-middle

./: .dockerignore  .geminiignore  .gitignore  cookies.py  cookies.txt  pyproject.toml
.gemini/: GEMINI.md  GEMINI.md.backup  sandbox.Dockerfile  settings.json  settings.json.bak
.github/: README.md
agents/: README.md  ctf_agent.md  developer_agent.md  web_security_agent.md
agents/components/: ethical_guards.md  test.md  tmux.md
challenges/: arkansas_1.md  arkansas_2.md  django.md  ercot_1.md  ercot_2.md  ginna.md  ginna_3.md  ht_mega.md  langchain_1.md  lightning.md  mychart.md  nashville_waste.md  nyiso.md  parse_url.md  setuptools.md  undici.md  walter_reed.md  wordpress_business.md  wordpress_forms.md  yaml.md
challenges/wave 1/: nashville_waste.md  walter_reed.md
challenges/wave 2/: deer_island.md  ginna_2.md  walter_reed_2.md  wordpress_frontend.md
challenges/wave 3/: nyiso.md  upmc_healthcare.md  wordpress_forms.md  wordpress_wholesale.md  yaml.md
challenges/wave 4/: astropy.md  curl.md  ginna_4.md  jfk_1.md  nyiso_2.md  presta_shop.md  suite_events.md  zipp.md
challenges/wave 5/: ercot_3.md  jfk2.md  nashville_2.md
notes/: AGENTS.md  GEMINI_SANDBOX.md  TOOLS.md  USEFUL_COMMANDS.md
prompts/: context.md  create_file_stubborn.md  listener.md  obey.md
tools/: README.md  agent_manager.py  dig_server.py  mcp_config.py  recall_server.py  test_docker.sh  test_server.py  web_search_server.py  xxd_server.py
tools/prompts/: TOOLS.md
tools/templates/: README_QA_TEMPLATE.md
